# formsolution-integration-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  run.py  settings.py
app/api/v1/: auth.py  dossier.py  job.py  stats.py
app/controllers/: auth_controller.py  dossier_controller.py  job_controller.py  stats_controller.py
app/core/: config.py  db.py  scheduler.py  security.py  util.py
app/middlewares/: auth_middleware.py
app/models/: auth_model.py  dossier_model.py  job_model.py
app/repositories/: dossier_repository.py  job_repository.py  stats_repository.py
app/scripts/: download_documents.py  drive.py  fetch_files.py  restore.py  upload.py
app/services/: dossier_service.py  job_service.py  stats_service.py
app/tests/: job_db.py
app/utils/: datetime.py  handle_execution.py
